start worker processes, make mail setup configurable, und update READMe accordingly

--- a/files/supervisord.conf
+++ b/files/supervisord.conf
@@ -35,3 +35,13 @@ command=/home/openproject/start_openproject.sh
 autostart=true
 autorestart=true
 startsecs=100    ; not sure if 100 secs is OK or not. well. it works for me
+
+;openproject-worker-process
+[program:openproject-worker-process]
+environment=RAILS_ENV=production
+user=openproject
+directory=/home/openproject/openproject
+command=/home/openproject/start_openproject_worker.sh
+autostart=true
+autorestart=true
+startsecs=100    ; not sure if 100 secs is OK or not. well. it works for me
