--- a/files/configuration.yml
+++ b/files/configuration.yml
@@ -1,31 +1,3 @@
-#-- copyright
-# OpenProject is a project management system.
-# Copyright (C) 2012-2013 the OpenProject Foundation (OPF)
-#
-# This program is free software; you can redistribute it and/or
-# modify it under the terms of the GNU General Public License version 3.
-#
-# OpenProject is a fork of ChiliProject, which is a fork of Redmine. The copyright follows:
-# Copyright (C) 2006-2013 Jean-Philippe Lang
-# Copyright (C) 2010-2013 the ChiliProject Team
-#
-# This program is free software; you can redistribute it and/or
-# modify it under the terms of the GNU General Public License
-# as published by the Free Software Foundation; either version 2
-# of the License, or (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-#
-# See doc/COPYRIGHT.rdoc for more details.
-#++
-
 # = OpenProject configuration file
 #
 # Each environment has it's own configuration options.  If you are only
@@ -103,13 +75,14 @@
 # default configuration options for all environments
 default:
   # Outgoing emails configuration (see examples above)
-  email_delivery_method: :smtp
-  smtp_address: smtp.example.net
-  smtp_port: 25
-  smtp_domain: example.net
-  smtp_authentication: :login
-  smtp_user_name: "openproject@example.net"
-  smtp_password: "my_openproject_password"
+  # email_delivery_method: :smtp
+  # smtp_address: smtp.example.net
+  # smtp_port: 25
+  # smtp_domain: example.net
+  # smtp_authentication: :login
+  # smtp_user_name: "openproject@example.net"
+  # smtp_password: "my_openproject_password"
+  email_delivery_method: :letter_opener
 
   # Prefix to the url-path. This path is then prepended to all
   # the routes and is used to correclty identify the path to the assets.
@@ -143,7 +116,7 @@ default:
   # disable_browser_cache: true
 
   # use memcache for performance, memcached must be installed
-  # rails_cache_store: :memcache
+  rails_cache_store: :memcache
 
   # Configuration of SCM executable command.
   # Absolute path (e.g. /usr/local/bin/hg) or command name (e.g. hg.exe, bzr.exe)
