--- a/files/configuration.yml
+++ b/files/configuration.yml
@@ -75,14 +75,14 @@
 # default configuration options for all environments
 default:
   # Outgoing emails configuration (see examples above)
-  # email_delivery_method: :smtp
-  # smtp_address: smtp.example.net
-  # smtp_port: 25
-  # smtp_domain: example.net
-  # smtp_authentication: :login
-  # smtp_user_name: "openproject@example.net"
-  # smtp_password: "my_openproject_password"
-  email_delivery_method: :letter_opener
+  email_delivery_method: :smtp
+  smtp_address: smtp.gmail.com
+  smtp_enable_starttls_auto: true
+  smtp_port: 587
+  smtp_domain: smtp.gmail.com
+  smtp_authentication: :login
+  smtp_user_name: "openproject@example.net"
+  smtp_password: "my_openproject_password"
 
   # Prefix to the url-path. This path is then prepended to all
   # the routes and is used to correclty identify the path to the assets.
